[tool.poetry]
name = "cradlenet"
version = "0.1.0"
description = "Deep learning engine for ecg and echo."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pytorch-lightning = "^2.0.3"
urllib3 = "1.26.15"
platformdirs = "<3.0.0"
scikit-learn = "1.1.3"
mlflow = "^2.4.1"
azureml-mlflow = "^1.51.0"
azureml = "^0.2.7"
azureml-core = "^1.51.0"
opencv-python-headless = "^4.7.0.72"
azureml-fsspec = "^1.1.0"
python-gdcm = "^3.0.22"
pydicom = "^2.4.0"
torch = "^2.0.1"
ipython = "^8.12.0"
jupyter = "^1.0.0"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
